# agent-router

./: .dockerignore  .env.template  .gitignore  AGENTS.md  Dockerfile  GEMINI.md  Makefile  README.md  docker-compose.yml  learnings.md  main.py  pyproject.toml
.github/workflows/: cicd.yml
agents/: router.py  summarizer.py  workers.py
api/routers/: chat.py  images.py  ingestion.py
core/: config.py  constants.py  image_gen.py  knowledge_base.py
db/: agent_config.py  context.py  schema.py  session.py
docs/: lessons.md
models/: api.py  dependencies.py
server/: main.py  pyproject.toml
server/agents/: router.py  summarizer.py
server/api/routers/: chat.py  images.py
server/core/: config.py  image_gen.py  knowledge_base.py  observability.py
server/db/: context.py  schema.py
server/models/: api.py  dependencies.py
server/tests/integration/: test_router.py
server/tests/unit/: test_tools.py
server/tools/: api_tools.py  fs_tools.py  rag_tools.py
tests/: conftest.py
tests/integration/: test_router.py
tools/: api_tools.py  fs_tools.py  rag_tools.py  registry.py
web/: Dockerfile  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx
web/src/app/chat/: page.tsx
web/src/app/images/: page.tsx
web/src/app/ingest/: page.tsx
web/src/components/: Sidebar.tsx
web/src/lib/: api-types.ts
