[project]
name = "agent-router"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "google-genai>=1.66.0",
    "httpx>=0.28.1",
    "logfire[fastapi]>=4.27.0",
    "pydantic-ai>=1.67.0",
    "pydantic-settings>=2.13.1",
    "uvicorn[standard]>=0.41.0",
]
